crates/kaban-parser/tests/snapshots/expressions__type_casting_with_nested_union_types.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: x as union(i32*, Person[], f64, union(i32&mut, f64&, c8 &mut));

Block [
    ExpressionStatement(
        As {
            left: Identifier("x"),
            right: Union [
                Pointer(
                    Type(I32),
                ),
                DynArrayType(
                    NamedType(
                        Identifier("Person"),
                    ),
                ),
                Type(F64),
                Union [
                    MutBorrow(
                        Type(I32),
                    ),
                    Borrow(
                        Type(F64),
                    ),
                    MutBorrow(
                        Type(C8),
                    ),
                ],
            ],
        },
    ),
]
