crates/kaban-parser/tests/snapshots/expressions__type_casting_with_simple_union_type.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x as union(i32*, f64, Person);

Block [
    As {
        left: Identifier("x"),
        right: Union [
            Pointer(
                Type(I32),
            ),
            Type(F64),
            NamedType(
                Identifier("Person"),
            ),
        ],
    },
]
