crates/kaban-parser/tests/snapshots/expressions__unary_minus.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: -10;

Block [
    Negative(
        IntLit("10"),
    ),
]
