crates/kaban-parser/tests/snapshots/expressions__undefined_chaining_member_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo??.bazz;

Block [
    UndefinedChainingAccess {
        left: Identifier("foo"),
        right: Identifier("bazz"),
    },
]
