crates/kaban-parser/tests/snapshots/expressions__undefined_coalecing_with_member_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x ?? foo.bazz;

Block [
    UndefinedCoalescing {
        left: Identifier("x"),
        right: MemberAccess {
            left: Identifier("foo"),
            right: Identifier("bazz"),
        },
    },
]
