crates/kaban-parser/tests/snapshots/expressions__while_condition_with_bool_condition_and_braces.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: while (x == 10) { x += 1; }

Block [
    While {
        block: Block [
            PlusAssignment {
                left: Identifier("x"),
                right: IntLit("1"),
            },
        ],
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
    },
]
